// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TileSet can consume counters 1`] = `
{
  "curved-tile-1": 2,
  "curved-tile-enlarged-1": 1,
  "straight-tile-1": 3,
}
`;

exports[`TileSet can consume counters 2`] = `
{
  "curved-tile-enlarged-1": 1,
  "straight-tile-1": 3,
}
`;

exports[`TileSet can consume counters 3`] = `
{
  "curved-tile-1": 2,
}
`;

exports[`TileSet can export counters 1`] = `
{
  "curved-tile-1": 2,
  "curved-tile-enlarged-1": 1,
  "straight-tile-1": 3,
}
`;

exports[`TileSet can get the tile model for a given key 1`] = `
StraightTileModel {
  "direction": "right",
  "id": "straight-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileSet can get the tile model for a given key 2`] = `
CurvedTileEnlargedModel {
  "direction": "right",
  "id": "curved-tile-enlarged-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileSet can get the tile model for a given key 3`] = `
CurvedTileModel {
  "direction": "right",
  "id": "curved-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
    "maxRatio": 4,
    "unlockRatio": false,
  },
}
`;

exports[`TileSet can list the counted tile models 1`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "curved-tile-enlarged-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "curved-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 4,
      "barrierWidth": 5,
      "laneWidth": 80,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileSet can list the counters 1`] = `
[
  {
    "count": 3,
    "model": StraightTileModel {
      "direction": "right",
      "id": "straight-tile-1",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    "modelId": "straight-tile-1",
  },
  {
    "count": 1,
    "model": CurvedTileEnlargedModel {
      "direction": "right",
      "id": "curved-tile-enlarged-1",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    "modelId": "curved-tile-enlarged-1",
  },
  {
    "count": 2,
    "model": CurvedTileModel {
      "direction": "right",
      "id": "curved-tile-1",
      "ratio": 1,
      "specs": TileSpecifications {
        "barrierChunks": 4,
        "barrierWidth": 5,
        "laneWidth": 80,
        "maxRatio": 4,
        "unlockRatio": false,
      },
    },
    "modelId": "curved-tile-1",
  },
]
`;

exports[`TileSet can load counters from the full list of tile models 1`] = `
[
  [
    "straight-tile-1",
    Infinity,
  ],
  [
    "curved-tile-1",
    Infinity,
  ],
  [
    "curved-tile-2",
    Infinity,
  ],
  [
    "curved-tile-3",
    Infinity,
  ],
  [
    "curved-tile-4",
    Infinity,
  ],
  [
    "curved-tile-enlarged-1",
    Infinity,
  ],
]
`;

exports[`TileSet can load counters from the full list of tile models 2`] = `
[
  [
    "straight-tile-1",
    10,
  ],
  [
    "curved-tile-1",
    10,
  ],
  [
    "curved-tile-2",
    10,
  ],
  [
    "curved-tile-3",
    10,
  ],
  [
    "curved-tile-4",
    10,
  ],
  [
    "curved-tile-enlarged-1",
    10,
  ],
]
`;

exports[`TileSet can map its counters 1`] = `
{
  "curved-tile-1": 20,
  "curved-tile-enlarged-1": 10,
  "straight-tile-1": 30,
}
`;

exports[`TileSet can reset counters 1`] = `
{
  "curved-tile-enlarged-1": 1,
  "straight-tile-1": 3,
}
`;

exports[`TileSet can reset counters 2`] = `
{
  "curved-tile-1": 2,
}
`;

exports[`TileSet can reset counters 3`] = `
{
  "curved-tile-1": 2,
  "curved-tile-enlarged-1": 1,
  "straight-tile-1": 3,
}
`;

exports[`TileSet can reset counters 4`] = `{}`;

exports[`TileSet can set the specifications of the tile models 1`] = `
[
  StraightTileModel {
    "direction": "right",
    "id": "straight-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 2,
      "barrierWidth": 1,
      "laneWidth": 10,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileEnlargedModel {
    "direction": "right",
    "id": "curved-tile-enlarged-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 2,
      "barrierWidth": 1,
      "laneWidth": 10,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
  CurvedTileModel {
    "direction": "right",
    "id": "curved-tile-1",
    "ratio": 1,
    "specs": TileSpecifications {
      "barrierChunks": 2,
      "barrierWidth": 1,
      "laneWidth": 10,
      "maxRatio": 4,
      "unlockRatio": false,
    },
  },
]
`;

exports[`TileSet emits an event when setting a counter 1`] = `
[
  "straight-tile-1",
  3,
  3,
]
`;

exports[`TileSet emits an event when setting a counter 2`] = `
[
  "curved-tile-enlarged-1",
  4,
  1,
]
`;

exports[`TileSet emits an event when setting a counter 3`] = `
[
  "curved-tile-1",
  5,
  2,
]
`;
